@@ -116,6 +116,15 @@ else
 AC_MSG_RESULT(no)
 fi
 
+AC_MSG_CHECKING(for solaris-specific requirements)
+if test "$os" = SunOS ; then
+AC_MSG_RESULT(yes)
+SOLARIS_EXTRA_LDLIBS=-lrt
+else
+AC_MSG_RESULT(no)
+SOLARIS_EXTRA_LDLIBS=
+fi
+
 AC_SUBST(HAVE_KERNEL_USB_DEVICE)
 AC_SUBST(HAVE_KERNEL_1284)
 AC_SUBST(HAVE_LIBIEEE1284)
@@ -139,6 +148,8 @@ AC_SUBST(LIBIEEE1284_EXTRA_BINS)
 AC_SUBST(NULLTRANS_EXTRA_OBJS)
 
 AC_SUBST(BID_EXTRA_OBJS)
+
+AC_SUBST(SOLARIS_EXTRA_LDLIBS)
 
 AC_PROG_RANLIB
 AC_PROG_INSTALL
